grammar/Wuwuzela_GrammarParser.py
# Generated from Wuwuzela_Grammar.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Wuwuzela_GrammarParser ( Parser ):

    grammarFileName = "Wuwuzela_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'music'", "'var'", "'if'", "'composition'", 
                     "'write'", "'True'", "'False'", "'and'", "'or'", "'while'", 
                     "'not'", "'print'", "'transpose'", "'='", "';'", "','", 
                     "'=='", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "MUSIC", "VAR", "IF", "COMPOSITION", 
                      "WRITE", "TRUE", "FALSE", "AND", "OR", "WHILE", "NOT", 
                      "PRINT", "TRANSPOSE", "ASSIGN", "SEMICOLON", "COMMA", 
                      "EQUAL", "GREATER", "GREATER_EQUAL", "LESS", "LESS_EQUAL", 
                      "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "LBRACKET", 
                      "RBRACKET", "LSQUAREBRACKET", "RSQUAREBRACKET", "LBRACE", 
                      "RBRACE", "SOUND", "KEY", "NUMBER", "TEMPO", "VARIABLE", 
                      "COMMENT", "STRING", "WS" ]

    RULE_musicProgram = 0
    RULE_declaration = 1
    RULE_statement = 2
    RULE_whileLoop = 3
    RULE_printStatement = 4
    RULE_value = 5
    RULE_ifStatement = 6
    RULE_varStatement = 7
    RULE_varStatementContent = 8
    RULE_containerStatement = 9
    RULE_containerContent = 10
    RULE_transposeStatement = 11
    RULE_compositionStatement = 12
    RULE_write = 13
    RULE_logicalExpression = 14
    RULE_andOr = 15
    RULE_comparison = 16
    RULE_equation = 17
    RULE_element = 18
    RULE_mathOperation = 19
    RULE_trueFalse = 20

    ruleNames =  [ "musicProgram", "declaration", "statement", "whileLoop", 
                   "printStatement", "value", "ifStatement", "varStatement", 
                   "varStatementContent", "containerStatement", "containerContent", 
                   "transposeStatement", "compositionStatement", "write", 
                   "logicalExpression", "andOr", "comparison", "equation", 
                   "element", "mathOperation", "trueFalse" ]

    EOF = Token.EOF
    MUSIC=1
    VAR=2
    IF=3
    COMPOSITION=4
    WRITE=5
    TRUE=6
    FALSE=7
    AND=8
    OR=9
    WHILE=10
    NOT=11
    PRINT=12
    TRANSPOSE=13
    ASSIGN=14
    SEMICOLON=15
    COMMA=16
    EQUAL=17
    GREATER=18
    GREATER_EQUAL=19
    LESS=20
    LESS_EQUAL=21
    PLUS=22
    MINUS=23
    MULTIPLY=24
    DIVIDE=25
    LBRACKET=26
    RBRACKET=27
    LSQUAREBRACKET=28
    RSQUAREBRACKET=29
    LBRACE=30
    RBRACE=31
    SOUND=32
    KEY=33
    NUMBER=34
    TEMPO=35
    VARIABLE=36
    COMMENT=37
    STRING=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MusicProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUSIC(self):
            return self.getToken(Wuwuzela_GrammarParser.MUSIC, 0)

        def LBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Wuwuzela_GrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(Wuwuzela_GrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_musicProgram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMusicProgram" ):
                listener.enterMusicProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMusicProgram" ):
                listener.exitMusicProgram(self)




    def musicProgram(self):

        localctx = Wuwuzela_GrammarParser.MusicProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_musicProgram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(Wuwuzela_GrammarParser.MUSIC)
            self.state = 43
            self.match(Wuwuzela_GrammarParser.LBRACE)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Wuwuzela_GrammarParser.VAR) | (1 << Wuwuzela_GrammarParser.IF) | (1 << Wuwuzela_GrammarParser.WRITE) | (1 << Wuwuzela_GrammarParser.WHILE) | (1 << Wuwuzela_GrammarParser.PRINT) | (1 << Wuwuzela_GrammarParser.TRANSPOSE))) != 0):
                self.state = 44
                self.declaration()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(Wuwuzela_GrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.StatementContext,0)


        def varStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.VarStatementContext,0)


        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = Wuwuzela_GrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Wuwuzela_GrammarParser.IF, Wuwuzela_GrammarParser.WRITE, Wuwuzela_GrammarParser.WHILE, Wuwuzela_GrammarParser.PRINT, Wuwuzela_GrammarParser.TRANSPOSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.statement()
                pass
            elif token in [Wuwuzela_GrammarParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.varStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileLoop(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.WhileLoopContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.IfStatementContext,0)


        def transposeStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.TransposeStatementContext,0)


        def write(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.WriteContext,0)


        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Wuwuzela_GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Wuwuzela_GrammarParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.whileLoop()
                pass
            elif token in [Wuwuzela_GrammarParser.PRINT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.printStatement()
                pass
            elif token in [Wuwuzela_GrammarParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.ifStatement()
                pass
            elif token in [Wuwuzela_GrammarParser.TRANSPOSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.transposeStatement()
                pass
            elif token in [Wuwuzela_GrammarParser.WRITE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.write()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(Wuwuzela_GrammarParser.WHILE, 0)

        def LBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACKET, 0)

        def logicalExpression(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.LogicalExpressionContext,0)


        def RBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACKET, 0)

        def LBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACE, 0)

        def declaration(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.DeclarationContext,0)


        def RBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)




    def whileLoop(self):

        localctx = Wuwuzela_GrammarParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(Wuwuzela_GrammarParser.WHILE)
            self.state = 64
            self.match(Wuwuzela_GrammarParser.LBRACKET)
            self.state = 65
            self.logicalExpression(0)
            self.state = 66
            self.match(Wuwuzela_GrammarParser.RBRACKET)
            self.state = 67
            self.match(Wuwuzela_GrammarParser.LBRACE)
            self.state = 68
            self.declaration()
            self.state = 69
            self.match(Wuwuzela_GrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(Wuwuzela_GrammarParser.PRINT, 0)

        def LBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACKET, 0)

        def value(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.ValueContext,0)


        def RBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(Wuwuzela_GrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = Wuwuzela_GrammarParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(Wuwuzela_GrammarParser.PRINT)
            self.state = 72
            self.match(Wuwuzela_GrammarParser.LBRACKET)
            self.state = 73
            self.value()
            self.state = 74
            self.match(Wuwuzela_GrammarParser.RBRACKET)
            self.state = 75
            self.match(Wuwuzela_GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(Wuwuzela_GrammarParser.STRING, 0)

        def VARIABLE(self):
            return self.getToken(Wuwuzela_GrammarParser.VARIABLE, 0)

        def equation(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.EquationContext,0)


        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = Wuwuzela_GrammarParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(Wuwuzela_GrammarParser.STRING)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(Wuwuzela_GrammarParser.VARIABLE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.equation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Wuwuzela_GrammarParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACKET, 0)

        def logicalExpression(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.LogicalExpressionContext,0)


        def RBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACKET, 0)

        def LBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACE, 0)

        def declaration(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.DeclarationContext,0)


        def RBRACE(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACE, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = Wuwuzela_GrammarParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(Wuwuzela_GrammarParser.IF)
            self.state = 84
            self.match(Wuwuzela_GrammarParser.LBRACKET)
            self.state = 85
            self.logicalExpression(0)
            self.state = 86
            self.match(Wuwuzela_GrammarParser.RBRACKET)
            self.state = 87
            self.match(Wuwuzela_GrammarParser.LBRACE)
            self.state = 88
            self.declaration()
            self.state = 89
            self.match(Wuwuzela_GrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(Wuwuzela_GrammarParser.VAR, 0)

        def VARIABLE(self):
            return self.getToken(Wuwuzela_GrammarParser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(Wuwuzela_GrammarParser.ASSIGN, 0)

        def varStatementContent(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.VarStatementContentContext,0)


        def SEMICOLON(self):
            return self.getToken(Wuwuzela_GrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_varStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarStatement" ):
                listener.enterVarStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarStatement" ):
                listener.exitVarStatement(self)




    def varStatement(self):

        localctx = Wuwuzela_GrammarParser.VarStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(Wuwuzela_GrammarParser.VAR)
            self.state = 92
            self.match(Wuwuzela_GrammarParser.VARIABLE)
            self.state = 93
            self.match(Wuwuzela_GrammarParser.ASSIGN)
            self.state = 94
            self.varStatementContent()
            self.state = 95
            self.match(Wuwuzela_GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarStatementContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOUND(self):
            return self.getToken(Wuwuzela_GrammarParser.SOUND, 0)

        def VARIABLE(self):
            return self.getToken(Wuwuzela_GrammarParser.VARIABLE, 0)

        def NUMBER(self):
            return self.getToken(Wuwuzela_GrammarParser.NUMBER, 0)

        def logicalExpression(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.LogicalExpressionContext,0)


        def containerStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.ContainerStatementContext,0)


        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_varStatementContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarStatementContent" ):
                listener.enterVarStatementContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarStatementContent" ):
                listener.exitVarStatementContent(self)




    def varStatementContent(self):

        localctx = Wuwuzela_GrammarParser.VarStatementContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varStatementContent)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(Wuwuzela_GrammarParser.SOUND)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(Wuwuzela_GrammarParser.VARIABLE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(Wuwuzela_GrammarParser.NUMBER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.logicalExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.containerStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContainerStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUAREBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LSQUAREBRACKET, 0)

        def containerContent(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.ContainerContentContext,0)


        def RSQUAREBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RSQUAREBRACKET, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_containerStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContainerStatement" ):
                listener.enterContainerStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContainerStatement" ):
                listener.exitContainerStatement(self)




    def containerStatement(self):

        localctx = Wuwuzela_GrammarParser.ContainerStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_containerStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(Wuwuzela_GrammarParser.LSQUAREBRACKET)
            self.state = 105
            self.containerContent()
            self.state = 106
            self.match(Wuwuzela_GrammarParser.RSQUAREBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContainerContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SOUND(self, i:int=None):
            if i is None:
                return self.getTokens(Wuwuzela_GrammarParser.SOUND)
            else:
                return self.getToken(Wuwuzela_GrammarParser.SOUND, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Wuwuzela_GrammarParser.COMMA)
            else:
                return self.getToken(Wuwuzela_GrammarParser.COMMA, i)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_containerContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContainerContent" ):
                listener.enterContainerContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContainerContent" ):
                listener.exitContainerContent(self)




    def containerContent(self):

        localctx = Wuwuzela_GrammarParser.ContainerContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_containerContent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(Wuwuzela_GrammarParser.SOUND)
                    self.state = 109
                    self.match(Wuwuzela_GrammarParser.COMMA) 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 115
            self.match(Wuwuzela_GrammarParser.SOUND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransposeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSPOSE(self):
            return self.getToken(Wuwuzela_GrammarParser.TRANSPOSE, 0)

        def LBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACKET, 0)

        def KEY(self):
            return self.getToken(Wuwuzela_GrammarParser.KEY, 0)

        def RBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(Wuwuzela_GrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_transposeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransposeStatement" ):
                listener.enterTransposeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransposeStatement" ):
                listener.exitTransposeStatement(self)




    def transposeStatement(self):

        localctx = Wuwuzela_GrammarParser.TransposeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_transposeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(Wuwuzela_GrammarParser.TRANSPOSE)
            self.state = 118
            self.match(Wuwuzela_GrammarParser.LBRACKET)
            self.state = 119
            self.match(Wuwuzela_GrammarParser.KEY)
            self.state = 120
            self.match(Wuwuzela_GrammarParser.RBRACKET)
            self.state = 121
            self.match(Wuwuzela_GrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPOSITION(self):
            return self.getToken(Wuwuzela_GrammarParser.COMPOSITION, 0)

        def LBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.LBRACKET, 0)

        def containerStatement(self):
            return self.getTypedRuleContext(Wuwuzela_GrammarParser.ContainerStatementContext,0)


        def RBRACKET(self):
            return self.getToken(Wuwuzela_GrammarParser.RBRACKET, 0)

        def VARIABLE(self):
            return self.getToken(Wuwuzela_GrammarParser.VARIABLE, 0)

        def getRuleIndex(self):
            return Wuwuzela_GrammarParser.RULE_compositionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompositionStatement" ):
                listener.enterCompositionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompositionStatement" ):
                listener.exitCompositionStatement(self)




    def compositionStatement(self):

        localctx = Wuwuzela_GrammarParser.CompositionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compositionStatement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(Wuwuzela_GrammarParser.COMPOSITION)
                self.state = 124
                self.match(Wuwuzela_GrammarParser.LBRACKET)
                self.state = 125
                self.containerStatement()
                self.state = 126
                self.match(Wuwuzela_GrammarParser.RBRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(Wuwuzela_GrammarParser.COMPOSITION)
                self.state = 129
                self.match(Wuwuzela_GrammarParser.LBRACKET)
                self.state = 130
                self.match(Wuwuzela_GrammarParser.VARIABLE)
                self.state = 131
                self.match(Wuwuzela_GrammarParser.RBRACKET)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'
